addquery resolver for problem and iteam search